[CXF-7872]more clean up